--- a/notebook/data_preparation.ipynb
+++ b/notebook/data_preparation.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,11 +91,11 @@
        " 'best_model_path': '../models/best_model.pkl',\n",
        " 'best_model_summary_path': '../models/best_model_summary.pkl',\n",
        " 'pdo': 20,\n",
-       " 'score_ref': 300,\n",
+       " 'score_ref': 200,\n",
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -111,7 +111,7 @@
        "  'cb_person_default_on_file']}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "4                         Y                           4  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "Name: loan_status, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -496,11 +496,11 @@
        " 'best_model_path': '../models/best_model.pkl',\n",
        " 'best_model_summary_path': '../models/best_model_summary.pkl',\n",
        " 'pdo': 20,\n",
-       " 'score_ref': 300,\n",
+       " 'score_ref': 200,\n",
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -516,7 +516,7 @@
        "  'cb_person_default_on_file']}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Name: loan_status, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "Name: loan_status, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
