--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -19,18 +19,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import library\n",
+    "import library\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import stats\n",
-    "%matplotlib inline\n",
-    "import pylab\n",
+    "import sys\n",
+    "\n",
+    "#add the project source directory to the system path for importing custom utilities\n",
+    "sys.path.append(\"../src\")\n",
+    "\n",
+    "#import custom utility function from 'utils' module\n",
+    "import utils#import library\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "\n",
     "#add the project source directory to the system path for importing custom utilities\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -84,11 +92,11 @@
        " 'best_model_path': '../models/best_model.pkl',\n",
        " 'best_model_summary_path': '../models/best_model_summary.pkl',\n",
        " 'pdo': 20,\n",
-       " 'score_ref': 300,\n",
+       " 'score_ref': 200,\n",
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -104,7 +112,7 @@
        "  'cb_person_default_on_file']}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +298,7 @@
        "6493                          N                           2            0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +338,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +405,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -510,11 +518,11 @@
        " 'best_model_path': '../models/best_model.pkl',\n",
        " 'best_model_summary_path': '../models/best_model_summary.pkl',\n",
        " 'pdo': 20,\n",
-       " 'score_ref': 300,\n",
+       " 'score_ref': 200,\n",
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -530,7 +538,7 @@
        "  'cb_person_default_on_file']}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +687,7 @@
        "cb_person_cred_hist_length                    1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
