--- a/notebook/modeling.ipynb
+++ b/notebook/modeling.ipynb
@@ -79,11 +79,11 @@
        " 'best_model_path': '../models/best_model.pkl',\n",
        " 'best_model_summary_path': '../models/best_model_summary.pkl',\n",
        " 'pdo': 20,\n",
-       " 'score_ref': 300,\n",
+       " 'score_ref': 200,\n",
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        " [2, 8])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        " 2  cb_person_default_on_file -0.990468)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        " 10  cb_person_cred_hist_length -0.320670)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
