--- a/notebook/scaling.ipynb
+++ b/notebook/scaling.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -99,7 +99,7 @@
        "  'cb_person_default_on_file']}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "48       4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "person_income_bin               -14   35"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -974,44 +974,33 @@
     {
      "data": {
       "text/plain": [
-       "{'Missing': {'loan_amnt_bin': nan,\n",
+       "{'Missing': {'loan_intent': nan,\n",
        "  'cb_person_cred_hist_length_bin': nan,\n",
+       "  'loan_amnt_bin': nan,\n",
        "  'person_home_ownership': nan,\n",
-       "  'loan_int_rate_bin': 11,\n",
-       "  'loan_intent': nan,\n",
-       "  'cb_person_default_on_file': nan,\n",
-       "  'person_emp_length_bin': 5,\n",
        "  'loan_percent_income_bin': nan,\n",
        "  'person_age_bin': nan,\n",
+       "  'person_emp_length_bin': 5,\n",
+       "  'cb_person_default_on_file': nan,\n",
+       "  'loan_int_rate_bin': 11,\n",
        "  'person_income_bin': nan},\n",
-       " 'loan_amnt_bin': {Interval(499.999, 4400.0, closed='right'): 11,\n",
-       "  Interval(4400.0, 6800.0, closed='right'): 16,\n",
-       "  Interval(6800.0, 10000.0, closed='right'): 14,\n",
-       "  Interval(10000.0, 14500.0, closed='right'): 9,\n",
-       "  Interval(14500.0, 35000.0, closed='right'): 0},\n",
-       " 'cb_person_cred_hist_length_bin': {Interval(1.999, 3.0, closed='right'): 9,\n",
-       "  Interval(3.0, 4.0, closed='right'): 10,\n",
-       "  Interval(4.0, 5.0, closed='right'): 11,\n",
-       "  Interval(5.0, 9.0, closed='right'): 10,\n",
-       "  Interval(9.0, 30.0, closed='right'): 10},\n",
-       " 'person_home_ownership': {'MORTGAGE': 24, 'OTHER': -1, 'OWN': 36, 'RENT': 0},\n",
-       " 'loan_int_rate_bin': {Interval(5.419, 7.51, closed='right'): 43,\n",
-       "  Interval(7.51, 10.25, closed='right'): 29,\n",
-       "  Interval(10.25, 11.86, closed='right'): 20,\n",
-       "  Interval(11.86, 13.92, closed='right'): 12,\n",
-       "  Interval(13.92, 22.48, closed='right'): -30},\n",
        " 'loan_intent': {'DEBTCONSOLIDATION': -1,\n",
        "  'EDUCATION': 20,\n",
        "  'HOMEIMPROVEMENT': 1,\n",
        "  'MEDICAL': 0,\n",
        "  'PERSONAL': 14,\n",
        "  'VENTURE': 28},\n",
-       " 'cb_person_default_on_file': {'N': 11, 'Y': 4},\n",
-       " 'person_emp_length_bin': {Interval(-0.001, 1.0, closed='right'): 7,\n",
-       "  Interval(1.0, 3.0, closed='right'): 9,\n",
-       "  Interval(3.0, 5.0, closed='right'): 11,\n",
-       "  Interval(5.0, 8.0, closed='right'): 12,\n",
-       "  Interval(8.0, 123.0, closed='right'): 13},\n",
+       " 'cb_person_cred_hist_length_bin': {Interval(1.999, 3.0, closed='right'): 9,\n",
+       "  Interval(3.0, 4.0, closed='right'): 10,\n",
+       "  Interval(4.0, 5.0, closed='right'): 11,\n",
+       "  Interval(5.0, 9.0, closed='right'): 10,\n",
+       "  Interval(9.0, 30.0, closed='right'): 10},\n",
+       " 'loan_amnt_bin': {Interval(499.999, 4400.0, closed='right'): 11,\n",
+       "  Interval(4400.0, 6800.0, closed='right'): 16,\n",
+       "  Interval(6800.0, 10000.0, closed='right'): 14,\n",
+       "  Interval(10000.0, 14500.0, closed='right'): 9,\n",
+       "  Interval(14500.0, 35000.0, closed='right'): 0},\n",
+       " 'person_home_ownership': {'MORTGAGE': 24, 'OTHER': -1, 'OWN': 36, 'RENT': 0},\n",
        " 'loan_percent_income_bin': {Interval(-0.001, 0.08, closed='right'): 28,\n",
        "  Interval(0.08, 0.12, closed='right'): 26,\n",
        "  Interval(0.12, 0.18, closed='right'): 20,\n",
@@ -1022,6 +1011,17 @@
        "  Interval(25.0, 27.0, closed='right'): 10,\n",
        "  Interval(27.0, 32.0, closed='right'): 10,\n",
        "  Interval(32.0, 144.0, closed='right'): 10},\n",
+       " 'person_emp_length_bin': {Interval(-0.001, 1.0, closed='right'): 7,\n",
+       "  Interval(1.0, 3.0, closed='right'): 9,\n",
+       "  Interval(3.0, 5.0, closed='right'): 11,\n",
+       "  Interval(5.0, 8.0, closed='right'): 12,\n",
+       "  Interval(8.0, 123.0, closed='right'): 13},\n",
+       " 'cb_person_default_on_file': {'N': 11, 'Y': 4},\n",
+       " 'loan_int_rate_bin': {Interval(5.419, 7.51, closed='right'): 43,\n",
+       "  Interval(7.51, 10.25, closed='right'): 29,\n",
+       "  Interval(10.25, 11.86, closed='right'): 20,\n",
+       "  Interval(11.86, 13.92, closed='right'): 12,\n",
+       "  Interval(13.92, 22.48, closed='right'): -30},\n",
        " 'person_income_bin': {Interval(3999.999, 35000.0, closed='right'): -14,\n",
        "  Interval(35000.0, 48996.0, closed='right'): 9,\n",
        "  Interval(48996.0, 63000.0, closed='right'): 14,\n",
@@ -1029,7 +1029,7 @@
        "  Interval(86000.0, 6000000.0, closed='right'): 35}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "[26064 rows x 10 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
        "0                  RENT     MEDICAL                         N  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
        "108"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
