--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -74,11 +74,11 @@
        " 'best_model_path': '../models/best_model.pkl',\n",
        " 'best_model_summary_path': '../models/best_model_summary.pkl',\n",
        " 'pdo': 20,\n",
-       " 'score_ref': 300,\n",
+       " 'score_ref': 200,\n",
        " 'odds_ref': 30,\n",
        " 'scorecards_path': '../models/scorecards.pkl',\n",
        " 'points_map_dict_path': '../models/points_map_dict.pkl',\n",
-       " 'X_points_path': '..//X_points.pkl',\n",
+       " 'X_points_path': '../models/X_points.pkl',\n",
        " 'X_train_points_path': '../models/X_train_points.pkl',\n",
        " 'score_path': '../models/score_path.pkl',\n",
        " 'cutoff_score': 150,\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,66 +169,66 @@
     {
      "data": {
       "text/plain": [
-       "{'Missing': {'person_emp_length_bin': -0.5216805596571665,\n",
-       "  'person_home_ownership': nan,\n",
-       "  'cb_person_default_on_file': nan,\n",
-       "  'person_age_bin': nan,\n",
-       "  'loan_intent': nan,\n",
-       "  'loan_int_rate_bin': 0.034577926166809825,\n",
-       "  'loan_percent_income_bin': nan,\n",
+       "{'Missing': {'person_age_bin': nan,\n",
        "  'person_income_bin': nan,\n",
+       "  'cb_person_cred_hist_length_bin': nan,\n",
+       "  'cb_person_default_on_file': nan,\n",
+       "  'person_home_ownership': nan,\n",
+       "  'loan_int_rate_bin': 0.034577926166809825,\n",
+       "  'person_emp_length_bin': -0.5216805596571665,\n",
+       "  'loan_intent': nan,\n",
        "  'loan_amnt_bin': nan,\n",
-       "  'cb_person_cred_hist_length_bin': nan},\n",
-       " 'person_emp_length_bin': {Interval(-0.001, 1.0, closed='right'): -0.30926752652826994,\n",
-       "  Interval(1.0, 3.0, closed='right'): -0.0868648074494491,\n",
-       "  Interval(3.0, 5.0, closed='right'): 0.11548687180509784,\n",
-       "  Interval(5.0, 8.0, closed='right'): 0.2350086297506111,\n",
-       "  Interval(8.0, 123.0, closed='right'): 0.3219160535081592},\n",
-       " 'person_home_ownership': {'MORTGAGE': 0.6796594201186501,\n",
-       "  'OTHER': -0.5494001420876587,\n",
-       "  'OWN': 1.2620088676912748,\n",
-       "  'RENT': -0.507537540861058},\n",
-       " 'cb_person_default_on_file': {'N': 0.21282855851210836,\n",
-       "  'Y': -0.7738271211693333},\n",
+       "  'loan_percent_income_bin': nan},\n",
        " 'person_age_bin': {Interval(19.999, 23.0, closed='right'): -0.1215242745737818,\n",
        "  Interval(23.0, 25.0, closed='right'): 0.006518968643743249,\n",
        "  Interval(25.0, 27.0, closed='right'): 0.049261238842137456,\n",
        "  Interval(27.0, 32.0, closed='right'): 0.07891633325666864,\n",
        "  Interval(32.0, 144.0, closed='right'): 0.05456465518304823},\n",
+       " 'person_income_bin': {Interval(3999.999, 35000.0, closed='right'): -1.0072369839339057,\n",
+       "  Interval(35000.0, 48996.0, closed='right'): -0.052875086095511434,\n",
+       "  Interval(48996.0, 63000.0, closed='right'): 0.1754188638522987,\n",
+       "  Interval(63000.0, 86000.0, closed='right'): 0.4920460029432934,\n",
+       "  Interval(86000.0, 6000000.0, closed='right'): 1.0308360777811831},\n",
+       " 'cb_person_cred_hist_length_bin': {Interval(1.999, 3.0, closed='right'): -0.07283960721847585,\n",
+       "  Interval(3.0, 4.0, closed='right'): -0.00432565854337613,\n",
+       "  Interval(4.0, 5.0, closed='right'): 0.10984548679660518,\n",
+       "  Interval(5.0, 9.0, closed='right'): 0.06425762383590662,\n",
+       "  Interval(9.0, 30.0, closed='right'): 0.04515646524487371},\n",
+       " 'cb_person_default_on_file': {'N': 0.21282855851210836,\n",
+       "  'Y': -0.7738271211693333},\n",
+       " 'person_home_ownership': {'MORTGAGE': 0.6796594201186501,\n",
+       "  'OTHER': -0.5494001420876587,\n",
+       "  'OWN': 1.2620088676912748,\n",
+       "  'RENT': -0.507537540861058},\n",
+       " 'loan_int_rate_bin': {Interval(5.419, 7.51, closed='right'): 1.0323381450618703,\n",
+       "  Interval(7.51, 10.25, closed='right'): 0.6000963944743186,\n",
+       "  Interval(10.25, 11.86, closed='right'): 0.3273101379753484,\n",
+       "  Interval(11.86, 13.92, closed='right'): 0.08068890250514954,\n",
+       "  Interval(13.92, 22.48, closed='right'): -1.2836906525105838},\n",
+       " 'person_emp_length_bin': {Interval(-0.001, 1.0, closed='right'): -0.30926752652826994,\n",
+       "  Interval(1.0, 3.0, closed='right'): -0.0868648074494491,\n",
+       "  Interval(3.0, 5.0, closed='right'): 0.11548687180509784,\n",
+       "  Interval(5.0, 8.0, closed='right'): 0.2350086297506111,\n",
+       "  Interval(8.0, 123.0, closed='right'): 0.3219160535081592},\n",
        " 'loan_intent': {'DEBTCONSOLIDATION': -0.3233961473501174,\n",
        "  'EDUCATION': 0.27702720116363105,\n",
        "  'HOMEIMPROVEMENT': -0.2304441874042834,\n",
        "  'MEDICAL': -0.2720802612066628,\n",
        "  'PERSONAL': 0.09789655373307285,\n",
        "  'VENTURE': 0.46986534572847405},\n",
-       " 'loan_int_rate_bin': {Interval(5.419, 7.51, closed='right'): 1.0323381450618703,\n",
-       "  Interval(7.51, 10.25, closed='right'): 0.6000963944743186,\n",
-       "  Interval(10.25, 11.86, closed='right'): 0.3273101379753484,\n",
-       "  Interval(11.86, 13.92, closed='right'): 0.08068890250514954,\n",
-       "  Interval(13.92, 22.48, closed='right'): -1.2836906525105838},\n",
-       " 'loan_percent_income_bin': {Interval(-0.001, 0.08, closed='right'): 0.769937876870108,\n",
-       "  Interval(0.08, 0.12, closed='right'): 0.6825736878245224,\n",
-       "  Interval(0.12, 0.18, closed='right'): 0.44117406886271987,\n",
-       "  Interval(0.18, 0.25, closed='right'): 0.16220204550548556,\n",
-       "  Interval(0.25, 0.83, closed='right'): -1.4012348722605639},\n",
-       " 'person_income_bin': {Interval(3999.999, 35000.0, closed='right'): -1.0072369839339057,\n",
-       "  Interval(35000.0, 48996.0, closed='right'): -0.052875086095511434,\n",
-       "  Interval(48996.0, 63000.0, closed='right'): 0.1754188638522987,\n",
-       "  Interval(63000.0, 86000.0, closed='right'): 0.4920460029432934,\n",
-       "  Interval(86000.0, 6000000.0, closed='right'): 1.0308360777811831},\n",
        " 'loan_amnt_bin': {Interval(499.999, 4400.0, closed='right'): 0.04360855447798741,\n",
        "  Interval(4400.0, 6800.0, closed='right'): 0.27881240166454496,\n",
        "  Interval(6800.0, 10000.0, closed='right'): 0.2079428473819581,\n",
        "  Interval(10000.0, 14500.0, closed='right'): -0.021754894958423962,\n",
        "  Interval(14500.0, 35000.0, closed='right'): -0.48347045511377984},\n",
-       " 'cb_person_cred_hist_length_bin': {Interval(1.999, 3.0, closed='right'): -0.07283960721847585,\n",
-       "  Interval(3.0, 4.0, closed='right'): -0.00432565854337613,\n",
-       "  Interval(4.0, 5.0, closed='right'): 0.10984548679660518,\n",
-       "  Interval(5.0, 9.0, closed='right'): 0.06425762383590662,\n",
-       "  Interval(9.0, 30.0, closed='right'): 0.04515646524487371}}"
+       " 'loan_percent_income_bin': {Interval(-0.001, 0.08, closed='right'): 0.769937876870108,\n",
+       "  Interval(0.08, 0.12, closed='right'): 0.6825736878245224,\n",
+       "  Interval(0.12, 0.18, closed='right'): 0.44117406886271987,\n",
+       "  Interval(0.18, 0.25, closed='right'): 0.16220204550548556,\n",
+       "  Interval(0.25, 0.83, closed='right'): -1.4012348722605639}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "[26064 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
